# agentoast

./: .gitignore  .oxlintrc.json  .tagpr  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cspell.json  index.html  lefthook.yaml  package.json  renovate.json  rust-toolchain.toml  tsconfig.node.json  vite.config.ts
.config/: wt.toml
.github/: release.yaml
.github/actions/release-app/: action.yaml
.github/actions/release-cli/: action.yaml
.github/infra/: agentoast.yaml
.github/workflows/: ci.yaml  tagpr.yaml  zizmor.yaml
.storybook/: main.ts  preview.tsx
.storybook/mocks/: tauri-core.ts  tauri-event.ts
crates/agentoast-cli/: Cargo.toml
crates/agentoast-cli/src/: lib.rs  main.rs
crates/agentoast-cli/src/hooks/: claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
crates/agentoast-cli/tests/: hook_claude.rs  hook_codex.rs
crates/agentoast-shared/: Cargo.toml
crates/agentoast-shared/src/: agent_detect.rs  config.rs  db.rs  git_info.rs  lib.rs  models.rs  schema.rs  tmux.rs
examples/notify/: claude.ts  codex.ts  opencode.ts
scripts/: demo-setup.sh
skills/agentoast-send/: SKILL.md
skills/agentoast-send/references/: operate.md
src/: App.tsx  OnboardingApp.tsx  SettingsApp.tsx  ToastApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: app_nap.rs  apps.rs  lib.rs  macos_hotkeys.rs  main.rs  native_toast.rs  panel.rs  screen.rs  sessions.rs  terminal.rs  tmux_hooks.rs  toast.rs  tray.rs  watcher.rs  webkit_config.rs
src-tauri/src/sessions/: ctrl.rs  hysteresis.rs  mod.rs  process_tree.rs
src-tauri/src/sessions/agents/: claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
src/components/: apps-setup.tsx  apps-view.tsx  easy-motion-grid.tsx  highlight-text.tsx  keybind-help.stories.tsx  keybind-help.tsx  notification-card.stories.tsx  notification-card.tsx  notification-setup.tsx  number-stepper.tsx  pane-card.stories.tsx  pane-card.tsx  panel-header.stories.tsx  panel-header.tsx  repo-group.stories.tsx  repo-group.tsx  restart-banner.tsx  search-bar.tsx  session-card.tsx  session-group.tsx  settings-section.tsx  shortcut-recorder.tsx  tab-bar.tsx  toast-position-picker.tsx  toggle.tsx
src/components/icons/: source-icon.stories.tsx  source-icon.tsx
src/hooks/: use-app-update.ts  use-apps-allowed-apps.ts  use-mute.ts  use-notifications.ts  use-sessions.ts
src/lib/: easy-motion-labels.ts  fuzzy.ts  settings-types.ts  types.ts  utils.ts
