[package]
name = "agentoast-app"
version.workspace = true
description = "Agentoast - macOS menu bar notification app"
edition = "2021"

[lints]
workspace = true

[lib]
name = "agentoast_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
agentoast-shared = { path = "../crates/agentoast-shared" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
log = "0.4"
env_logger = "0.11"
notify = "8"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
objc2-web-kit = { version = "0.3", features = ["WKPreferences", "WKWebView", "WKWebViewConfiguration"] }
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
