[package]
name = "agentoast-app"
version.workspace = true
description = "Agentoast - macOS menu bar notification app"
edition = "2021"

[lints]
workspace = true

[lib]
name = "agentoast_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
agentoast-shared = { path = "../crates/agentoast-shared" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
log = "0.4"
env_logger = "0.11"
fern = "0.7"
humantime = "2"
notify = "8"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSProcessInfo", "NSString",
    "NSGeometry", "NSTimer",
    "NSData",
] }
objc2-web-kit = { version = "0.3", features = ["WKPreferences", "WKWebView", "WKWebViewConfiguration"] }
objc2-app-kit = { version = "0.3", features = [
    "NSRunningApplication", "NSWorkspace",
    "NSPanel", "NSWindow", "NSView", "NSVisualEffectView",
    "NSTextField", "NSColor", "NSFont", "NSScreen",
    "NSAnimationContext", "NSTrackingArea", "NSEvent",
    "NSAppearance", "NSImage", "NSImageView",
] }
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
block2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
