[package]
name = "agentoast-app"
version.workspace = true
description = "Agentoast - macOS menu bar notification app"
edition = "2021"

[lints]
workspace = true

[lib]
name = "agentoast_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
agentoast-shared = { path = "../crates/agentoast-shared" }
tauri = { version = "2.10.2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
log = "0.4.29"
fern = "0.7.1"
humantime = "2.3.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = [
    "NSProcessInfo", "NSString",
    "NSGeometry", "NSTimer",
    "NSData",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSRunningApplication", "NSWorkspace",
    "NSPanel", "NSWindow", "NSView", "NSVisualEffectView",
    "NSTextField", "NSColor", "NSFont", "NSScreen",
    "NSAnimationContext", "NSTrackingArea", "NSEvent",
    "NSAppearance", "NSImage", "NSImageView",
] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
block2 = "0.6.2"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
