[package]
name = "agentoast-cli"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "agentoast"
path = "src/main.rs"

[dependencies]
agentoast-shared = { path = "../agentoast-shared" }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.25.0"
