[package]
name = "agentoast-cli"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[lib]
name = "agentoast_cli"
path = "src/lib.rs"

[dependencies]
agentoast-shared = { path = "../agentoast-shared" }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
