[package]
name = "agentoast-shared"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
toml_edit = "0.25.5"
log = "0.4.29"
