[package]
name = "agentoast-shared"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
toml_edit = "0.25.12"
log = "0.4.32"
