[package]
name = "agentoast-shared"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
toml = "1.1.3"
toml_edit = "0.25.13"
log = "0.4.33"

[dev-dependencies]
tempfile = "3.27.0"
